# noxu

./: .gitignore  .gitmodules  .markdownlint.yaml  .woodpecker.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LWL-ROUND2-DESIGN.md  LWL-SCALING-DESIGN.md  Makefile  NOTICE  README.md  RELEASE_CHECKLIST.md  SAFETY.md  SECURITY.md  WQ-DESIGN.md  _typos.toml  code-of-conduct.md  deny.toml  flake.nix  migrate_api.py  rust-toolchain.toml  tsan_suppressions.txt
benches/comparison/: Cargo.toml
benches/comparison/benches/: comparison.rs
benches/comparison/src/: lib.rs
benches/noxu-bench/: Cargo.toml
benches/noxu-bench/src/: concurrent.rs  dial9_profile.rs  evictor_policy_bench.rs  main.rs  metrics.rs  sustained_main.rs  w10_bench.rs  workloads.rs
benches/profiles/: Cargo.toml
benches/profiles/captures/: .gitignore  README.md
benches/profiles/src/: main.rs
benches/profiles/w03/: cumulative.txt  top_frames.txt
benches/profiles/w04/: cumulative.txt  top_frames.txt
benches/profiles/w10/: contention.txt  cumulative.txt  top_frames.txt
benches/profiles/w11/: calltree.txt  cumulative.txt  top_frames.txt
crates/noxu/: Cargo.toml
crates/noxu-bind/: Cargo.toml
crates/noxu-bind/benches/: bind_bench.rs
crates/noxu-bind/src/: byte_array_binding.rs  entry_binding.rs  error.rs  lib.rs  record_number_binding.rs
crates/noxu-bind/tests/: prop_tests.rs  tck_serial_binding.rs  tck_tuple_format.rs
crates/noxu-cleaner/: Cargo.toml
crates/noxu-cleaner/src/: cleaner.rs  cleaner_stat.rs  data_eraser.rs  db_file_summary.rs  error.rs  expiration_profile.rs  expiration_tracker.rs  extinction_scanner.rs  file_processor.rs  file_protector.rs  file_selector.rs  file_summary.rs  in_summary.rs  lib.rs  ln_info.rs  packed_offsets.rs  throttle.rs  tracked_file_summary.rs  utilization_profile.rs  utilization_tracker.rs  utilization_tracker_observer.rs  verify_utils.rs
crates/noxu-cleaner/tests/: cleaner_test.rs  prop_tests.rs
crates/noxu-collections/: Cargo.toml
crates/noxu-collections/src/: error.rs  internal.rs  lib.rs  stored_iterator.rs  stored_key_set.rs  stored_list.rs  stored_map.rs  stored_sorted_map.rs  stored_value_set.rs  transaction_runner.rs
crates/noxu-collections/tests/: collection_tests.rs  prop_tests.rs  sprint3c_tests.rs  tck_collection_semantics.rs  wave2b_tests.rs
crates/noxu-config/: Cargo.toml
crates/noxu-config/src/: exception_sink.rs  lib.rs  manager.rs  param.rs  params.rs
crates/noxu-config/tests/: je_db_config_manager_test.rs  je_default_audit.rs  prop_tests.rs  tck_environment_params.rs
crates/noxu-db/: Cargo.toml
crates/noxu-db/benches/: api_bench.rs
crates/noxu-db/src/: byte_comparator.rs  cache_mode.rs  checkpoint_config.rs  cursor.rs  cursor_config.rs  database.rs  database_config.rs  database_entry.rs  database_stats.rs  db_iter.rs  disk_ordered_cursor.rs  durability.rs  environment.rs  environment_config.rs  environment_mutable_config.rs  error.rs  extinction_filter.rs  get.rs  join_config.rs  join_cursor.rs  lib.rs  lock_mode.rs  metrics_export.rs  observe.rs  operation_result.rs  operation_status.rs  preload.rs  put.rs  read_options.rs  scan_filter.rs  secondary_config.rs  secondary_cursor.rs  secondary_database.rs  sequence.rs  sequence_config.rs  sequence_stats.rs  stats_config.rs  stats_file.rs  transaction.rs  transaction_config.rs  (+3 more)
crates/noxu-db/tests/: admin_cli_test.rs  bin_split_concurrency_regression.rs  clean_log_recovery_test.rs  compat_tests.rs  concurrency_test.rs  concurrent_commits_stress.rs  concurrent_reads_during_splits.rs  crash_recovery_test.rs  cursor_test.rs  d1_d5_cursor_adjust_test.rs  d2_both_range_non_dup_test.rs  d3_d4_d10_d11_status_test.rs  d6_d7_d8_d9_secondary_integrity_test.rs  db_iter_test.rs  db_trig_test.rs  dbi14_comparator_test.rs  disk_limit_test.rs  disk_ordered_cursor_test.rs  dst_crash_sweep.rs  durability_no_sync_honored_test.rs  eviction_pressure_test.rs  evictor_reclaim_multitree_test.rs  f12_daemon_shutdown_flush_test.rs  f13_evict_provisional_test.rs  forced_split_recovery_test.rs  group_commit_coalesce_bench.rs  halt_on_commit_after_checksum_test.rs  integration_test.rs  isolation_test.rs  je_atomic_put_test.rs  je_cleaner_sr_test.rs  je_cursor_delete_test.rs  je_cursor_edge_test.rs  je_database_entry_test.rs  je_database_test.rs  je_db_cursor_test.rs  je_dup_cursor_test.rs  je_port_tests.rs  je_recovery_sr_test.rs  je_recovery_test.rs  (+33 more)
crates/noxu-dbi/: Cargo.toml
crates/noxu-dbi/src/: backup_manager.rs  cursor_impl.rs  database_config.rs  database_id.rs  database_impl.rs  db_tree.rs  db_type.rs  dbi_config.rs  disk_limit.rs  disk_ordered_cursor_impl.rs  dup_key_data.rs  env_failure_reason.rs  env_state.rs  environment_impl.rs  error.rs  file_manager_scanner.rs  get_mode.rs  in_list.rs  lib.rs  memory_budget.rs  name_ln_codec.rs  node_sequence.rs  operation.rs  operation_status.rs  put_mode.rs  replica_ack.rs  replica_replay.rs  search_mode.rs  throughput_stats.rs  trigger.rs  truncate_result.rs
crates/noxu-dbi/tests/: id_sequence_recovery_test.rs  integration_tests.rs  local_write_replication_test.rs  prop_tests.rs  shuttle_cursor.rs  tracker_budget_test.rs
crates/noxu-engine/: Cargo.toml
crates/noxu-engine/src/: daemon_manager.rs  engine.rs  engine_config.rs  env_stats.rs  error.rs  lib.rs  verify.rs
crates/noxu-engine/tests/: shuttle_daemon_shutdown.rs
crates/noxu-evictor/: Cargo.toml
crates/noxu-evictor/src/: arbiter.rs  cache_mode.rs  error.rs  evictor.rs  evictor_stat.rs  lib.rs  lru_list.rs  policy.rs  (+3 more)
crates/noxu-latch/: Cargo.toml
crates/noxu-log/: Cargo.toml
crates/noxu-observe/: Cargo.toml
crates/noxu-persist/: Cargo.toml
crates/noxu-persist-derive/: Cargo.toml
crates/noxu-recovery/: Cargo.toml
crates/noxu-rep/: Cargo.toml
crates/noxu-spec/: Cargo.toml
crates/noxu-sync/: Cargo.toml
crates/noxu-tree/: Cargo.toml
crates/noxu-txn/: Cargo.toml
crates/noxu-util/: Cargo.toml
crates/noxu-xa/: Cargo.toml
examples/cash/: Cargo.toml
examples/cask/: Cargo.toml
examples/ftdb/: Cargo.toml
(+1149 files in other folders)
