[package]
name = "noxu-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Examples for Noxu DB"
publish = false

[workspace]
resolver = "2"
members = [
    ".",
    "crates/noxu-sync",
    "crates/noxu-util",
    "crates/noxu-latch",
    "crates/noxu-config",
    "crates/noxu-log",
    "crates/noxu-tree",
    "crates/noxu-txn",
    "crates/noxu-evictor",
    "crates/noxu-cleaner",
    "crates/noxu-recovery",
    "crates/noxu-dbi",
    "crates/noxu-engine",
    "crates/noxu-db",
    "crates/noxu-bind",
    "crates/noxu-collections",
    "crates/noxu-persist",
    "crates/noxu-persist-derive",
    "crates/noxu-rep",
    "crates/noxu-xa",
    "crates/noxu-observe",
    "crates/noxu",
    "crates/noxu-spec",
    "benches/comparison",
    "benches/noxu-bench",
    "benches/profiles",
    "examples/cash",
    "examples/cask",
    "examples/ftdb",
]

[dependencies]
noxu = { workspace = true }
tempfile = "3"

[[example]]
# Renamed from "simple" to avoid an output filename collision with the
# quoracle submodule's example of the same name. The source file path is
# unchanged so README/quick-start references that show the file contents
# still apply.
name = "quickstart"
path = "examples/simple.rs"

[[example]]
name = "transactions"
path = "examples/transactions.rs"

[[example]]
name = "cursor_scan"
path = "examples/cursor_scan.rs"

[[example]]
name = "binding"
path = "examples/binding.rs"

[[example]]
name = "collections"
path = "examples/collections.rs"

[[example]]
name = "persist"
path = "examples/persist.rs"

[[example]]
name = "persist_derive"
path = "examples/persist_derive.rs"

[[example]]
name = "secondary"
path = "examples/secondary.rs"

[[example]]
name = "sequence"
path = "examples/sequence.rs"

[[example]]
name = "getting_started"
path = "examples/getting_started.rs"

[[example]]
name = "scale_validation"
path = "examples/scale_validation.rs"

[[example]]
name = "xa_distributed"
path = "examples/xa_distributed.rs"

[[example]]
name = "transaction_config"
path = "examples/transaction_config.rs"

[workspace.package]
version = "3.2.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://codeberg.org/gregburd/noxu"
homepage = "https://codeberg.org/gregburd/noxu"
documentation = "https://docs.rs/noxu"
description = "Noxu DB — An embedded transactional key-value database engine in Rust"
keywords = ["database", "embedded", "transactional", "btree", "wal"]
categories = ["database-implementations", "data-structures", "concurrency"]
readme = "README.md"

[workspace.dependencies]
# Public crates (published to crates.io in dep order at v3.1.0).
# Both `version` and `path` are required: `version` is used by crates.io,
# `path` is used for local development inside the workspace.
noxu-sync         = { version = "3.2.0", path = "crates/noxu-sync" }
noxu-util         = { version = "3.2.0", path = "crates/noxu-util" }
noxu-latch        = { version = "3.2.0", path = "crates/noxu-latch" }
noxu-config       = { version = "3.2.0", path = "crates/noxu-config" }
noxu-log          = { version = "3.2.0", path = "crates/noxu-log" }
noxu-tree         = { version = "3.2.0", path = "crates/noxu-tree" }
noxu-txn          = { version = "3.2.0", path = "crates/noxu-txn" }
noxu-evictor      = { version = "3.2.0", path = "crates/noxu-evictor" }
noxu-cleaner      = { version = "3.2.0", path = "crates/noxu-cleaner" }
noxu-recovery     = { version = "3.2.0", path = "crates/noxu-recovery" }
noxu-dbi          = { version = "3.2.0", path = "crates/noxu-dbi" }
noxu-engine       = { version = "3.2.0", path = "crates/noxu-engine" }
noxu-db           = { version = "3.2.0", path = "crates/noxu-db" }
noxu-bind         = { version = "3.2.0", path = "crates/noxu-bind" }
noxu-collections  = { version = "3.2.0", path = "crates/noxu-collections" }
noxu-persist      = { version = "3.2.0", path = "crates/noxu-persist" }
noxu-persist-derive = { version = "3.2.0", path = "crates/noxu-persist-derive" }
noxu-xa           = { version = "3.2.0", path = "crates/noxu-xa" }
noxu-rep          = { version = "3.2.0", path = "crates/noxu-rep" }
# Private / optional crates (not in the v3.1.0 publish list).
# noxu-observe must have a version so that the noxu-db `observability` feature
# can be dry-run published; the orchestrator must publish noxu-observe before
# enabling that feature for crates.io users (see docs/src/contributing/publishing.md).
noxu-observe      = { version = "3.2.0", path = "crates/noxu-observe" }
noxu              = { version = "3.2.0", path = "crates/noxu" }

# Quorum system library (authored by Greg Burd — published at crates.io before
# noxu-rep can be published; path dep used for local development).
# If quoracle is not yet on crates.io, publish it first (see publishing.md).
quoracle = { version = "1.2.1", path = "crates/noxu-rep/quoracle" }

# QUIC transport (optional, pulled in by noxu-rep's "quic" feature)
quinn   = { version = "0.11" }
tokio   = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "time"] }
rustls  = { version = "0.23", features = ["ring", "std"], default-features = false }
rustls-pemfile = { version = "2" }
rcgen   = { version = "0.13" }
native-tls = { version = "0.2" }

# Observability (optional — behind noxu-db "observability" feature)
tracing = "0.1"
metrics = "0.24"

# External crates (approved core set)
hashbrown = "0.15"
lock_api = "0.4"
libc = "0.2"
parking_lot = { version = "0.12", features = ["arc_lock"] }
thiserror = "2"
log = "0.4"
bytes = "1"
crc32fast = "1"
crc32c = "0.6"
byteorder = "1"
memmap2 = "0.9"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
stateright = "0.31"

[workspace.lints.rust]
# Treat unsafe blocks in unsafe fns as requiring explicit `unsafe { }` scoping.
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
or_fun_call = "warn"
redundant_clone = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
# Require a `// SAFETY: …` comment on every `unsafe { }` block.
undocumented_unsafe_blocks = "warn"

[profile.dev]
# Use a single codegen unit so that llvm-cov does not double-count functions
# that are duplicated across units, which would otherwise halve reported coverage.
codegen-units = 1

[profile.release]
debug = "line-tables-only"
codegen-units = 1
lto = "thin"

[profile.fuzzing]
inherits = "dev"
opt-level = 3
debug = "line-tables-only"

[profile.bench-profile]
inherits = "release"
debug = true
lto = false
codegen-units = 16

# Profile-guided optimisation target.
#
# Build with `--profile pgo` only through the `benches/pgo.sh` script, which
# handles the three-phase PGO cycle:
#   1. Instrument: RUSTFLAGS="-Cprofile-generate=<dir>" cargo build --profile pgo
#   2. Train:      run the benchmark at reduced scale to emit .profraw files
#   3. Optimize:   RUSTFLAGS="-Cprofile-use=<merged.profdata>" cargo build --profile pgo
#
# fat LTO is used here (vs thin in release) because PGO + fat LTO yields the
# best throughput for hot-path-heavy workloads.  codegen-units=1 is required so
# the profile data covers the whole binary in a single LLVM IR module.
[profile.pgo]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
strip = "symbols"
