[package]
name = "noxu-workload-bench"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "noxu-workload-bench"
path = "src/main.rs"

[dependencies]
noxu-db = { workspace = true }
noxu-xa = { path = "../../crates/noxu-xa" }
tempfile = "3"
rand = { version = "0.8", features = ["small_rng"] }
