[package]
name = "noxu-workload-bench"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "noxu-workload-bench"
path = "src/main.rs"

[[bin]]
name = "noxu-sustained-baseline"
path = "src/sustained_main.rs"

[[bin]]
name = "noxu-w10-bench"
path = "src/w10_bench.rs"

[dependencies]
noxu-db = { workspace = true }
noxu-sync = { path = "../../crates/noxu-sync" }
noxu-xa = { path = "../../crates/noxu-xa" }
parking_lot = { workspace = true }
tempfile = "3"
rand = { version = "0.8", features = ["small_rng"] }
