[package]
name = "noxu-workload-bench"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "noxu-saturation"
path = "src/bin/saturation.rs"

[[bin]]
name = "noxu-write-sweep"
path = "src/bin/write_sweep.rs"

[[bin]]
name = "noxu-coalesce-probe"
path = "src/bin/coalesce_probe.rs"

[[bin]]
name = "noxu-compare"
path = "src/bin/compare.rs"

[[bin]]
name = "noxu-xbench"
path = "src/bin/xbench.rs"

[[bin]]
name = "noxu-sustained-write"
path = "src/bin/sustained_write.rs"

[[bin]]
name = "noxu-workload-bench"
path = "src/main.rs"
[[bin]]
name = "noxu-sustained-baseline"
path = "src/sustained_main.rs"

[[bin]]
name = "noxu-w10-bench"
path = "src/w10_bench.rs"

[[bin]]
name = "evictor_policy_bench"
path = "src/evictor_policy_bench.rs"

[dependencies]
noxu-db = { workspace = true }
noxu-sync = { path = "../../crates/noxu-sync" }
noxu-xa = { path = "../../crates/noxu-xa" }
parking_lot = { workspace = true }
tempfile = "3"
rand = { version = "0.8", features = ["small_rng"] }
# Tokio: BENCH-DRIVER-ONLY (the xbench BENCH_HARNESS=tokio async-client harness;
# dispatches the sync engine's blocking ops via spawn_blocking). The engine core
# stays sync — only this bench binary and noxu-rep use tokio.
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

# In-process perf_event_open sampler (CPU + off-CPU/context-switch stacks) for
# the `xbench --profile` diagnostic mode. Linux-only; needs frame pointers
# (build with RUSTFLAGS="-C force-frame-pointers=yes") and perf_event_paranoid<=2.
[target.'cfg(target_os = "linux")'.dependencies]
dial9-perf-self-profile = "0.4"
