[package]
name = "noxu-bind"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Serialization bindings for Noxu DB"

[dependencies]
noxu-db = { workspace = true }
noxu-util = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "bind_bench"
harness = false
