[package]
name = "noxu-bind"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Serialization bindings for Noxu DB"
# v2.3.0: every crate is `publish = false` while the workspace dependency graph
# still uses `path = "..."` deps. See docs/src/internal/wave-10-e-cratesio-prep.md.
publish = false

[dependencies]
noxu-db = { workspace = true }
noxu-util = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "bind_bench"
harness = false
