[package]
name = "noxu-cleaner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Log file garbage collection for Noxu DB"

[dependencies]
noxu-util = { workspace = true }
noxu-log = { workspace = true }
noxu-tree = { workspace = true }
noxu-txn = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
tempfile = "3"

[lints]
workspace = true
