[package]
name = "noxu-cleaner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Log file garbage collection for Noxu DB"

[dependencies]
parking_lot = { workspace = true }
hashbrown = { workspace = true }
noxu-util = { workspace = true }
noxu-log = { workspace = true }
noxu-tree = { workspace = true }
noxu-txn = { workspace = true }
noxu-sync = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
proptest = { workspace = true }
tempfile = "3"

[lints]
workspace = true
