[package]
name = "noxu-collections"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Iterator-based collection views for Noxu DB"

[dependencies]
hashbrown = { workspace = true }
noxu-db = { workspace = true }
noxu-bind = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
