[package]
name = "noxu-collections"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Iterator-based collection views for Noxu DB"
# v2.3.0: every crate is `publish = false` while the workspace dependency graph
# still uses `path = "..."` deps. See docs/src/internal/wave-10-e-cratesio-prep.md.
publish = false

[dependencies]
hashbrown = { workspace = true }
noxu-db = { workspace = true }
noxu-bind = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
