[package]
name = "noxu-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Configuration parameter system for Noxu DB"
publish = false  # internal implementation detail; consume via noxu-db

[dependencies]
hashbrown = { workspace = true }
noxu-util = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
