[package]
name = "noxu-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Configuration parameter system for Noxu DB"

[dependencies]
hashbrown = { workspace = true }
noxu-util = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hegeltest = { workspace = true }

[lints]
workspace = true
