[package]
name = "noxu-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Noxu DB - An embedded transactional database engine"

[features]
default = []
observability = ["dep:noxu-observe", "dep:tracing", "dep:metrics"]

[dependencies]
hashbrown = { workspace = true }
bytes = { workspace = true }
noxu-cleaner = { workspace = true }
noxu-dbi = { workspace = true }
noxu-engine = { workspace = true }
noxu-log = { workspace = true }
noxu-txn = { workspace = true }
noxu-util = { workspace = true }
noxu-config = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
noxu-sync = { workspace = true }

# Optional observability
noxu-observe = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = "3"
noxu-dbi = { workspace = true, features = ["testing"] }

[[bin]]
name = "crash_worker"
path = "src/bin/crash_worker.rs"

[[bench]]
name = "api_bench"
harness = false
