[package]
name = "noxu-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Noxu DB - An embedded transactional database engine"
# v2.3.0: every crate is `publish = false` while the workspace dependency graph
# still uses `path = "..."` deps. See docs/src/internal/wave-10-e-cratesio-prep.md.
publish = false

[features]
default = []
observability = ["dep:noxu-observe", "dep:tracing", "dep:metrics"]

[dependencies]
hashbrown = { workspace = true }
bytes = { workspace = true }
noxu-cleaner = { workspace = true }
noxu-dbi = { workspace = true }
noxu-engine = { workspace = true }
noxu-log = { workspace = true }
noxu-recovery = { workspace = true }
noxu-txn = { workspace = true }
noxu-util = { workspace = true }
noxu-config = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
noxu-sync = { workspace = true }

# Optional observability
noxu-observe = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = "3"
noxu-dbi = { workspace = true, features = ["testing"] }

[[bin]]
name = "crash_worker"
path = "src/bin/crash_worker.rs"

[[bench]]
name = "api_bench"
harness = false
