[package]
name = "noxu-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Noxu DB - An embedded transactional database engine"

[features]
default = []
observability = ["dep:noxu-observe", "dep:tracing", "dep:metrics", "noxu-observe/export"]
# Experimental, non-default eviction policies (CLOCK/LIRS/ARC/CAR/CoolHot).
# Off by default; passthrough to noxu-dbi (which propagates to noxu-evictor).
experimental-eviction-policies = [
    "noxu-dbi/experimental-eviction-policies",
]

[dependencies]
hashbrown = { workspace = true }
bytes = { workspace = true }
noxu-cleaner = { workspace = true }
noxu-dbi = { workspace = true }
noxu-engine = { workspace = true }
noxu-log = { workspace = true }
noxu-recovery = { workspace = true }
noxu-txn = { workspace = true }
noxu-util = { workspace = true }
noxu-config = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
noxu-sync = { workspace = true }

# Optional observability
noxu-observe = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
criterion = { workspace = true }
hegeltest = { workspace = true }
tempfile = "3"
noxu-dbi = { workspace = true, features = ["testing"] }
# SHARED_CACHE headline test needs SharedEvictorHandle (process-global
# shared-evictor reset hook + member_count).
noxu-evictor = { workspace = true }
# Test recorder for the metrics-export headline test (only used with the
# `observability` feature; the test file is fully cfg-gated).
metrics-util = "0.19"

[[bin]]
name = "crash_worker"
path = "src/bin/crash_worker.rs"

[[bin]]
name = "noxu-admin"
path = "src/bin/noxu_admin.rs"

[[bench]]
name = "api_bench"
harness = false
