[package]
name = "noxu-dbi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Database internals for Noxu DB"
publish = false  # internal implementation detail; consume via noxu-db

[dependencies]
hashbrown = { workspace = true }
noxu-util = { workspace = true }
noxu-config = { workspace = true }
noxu-latch = { workspace = true }
noxu-log = { workspace = true }
noxu-tree = { workspace = true }
noxu-txn = { workspace = true }
noxu-evictor = { workspace = true }
noxu-cleaner = { workspace = true }
noxu-recovery = { workspace = true }
noxu-sync = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
memmap2 = { workspace = true }

[features]
# Exposes test-only cursor-failure hooks for use by integration tests in
# dependent crates (e.g. noxu-db).  Never enable this in production builds.
testing = []

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"

[lints]
workspace = true
