[package]
name = "noxu-dbi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Database internals for Noxu DB"

[dependencies]
hashbrown = { workspace = true }
noxu-util = { workspace = true }
noxu-config = { workspace = true }
noxu-latch = { workspace = true }
noxu-log = { workspace = true }
noxu-tree = { workspace = true }
noxu-txn = { workspace = true }
noxu-evictor = { workspace = true }
noxu-cleaner = { workspace = true }
noxu-recovery = { workspace = true }
noxu-sync = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
memmap2 = { workspace = true }

[features]
# Exposes test-only cursor-failure hooks for use by integration tests in
# dependent crates (e.g. noxu-db).  Never enable this in production builds.
testing = []

# Experimental, non-default eviction policies (CLOCK/LIRS/ARC/CAR/CoolHot).
# Off by default; passthrough to noxu-evictor.
experimental-eviction-policies = [
    "noxu-evictor/experimental-eviction-policies",
]

# DST cursor coverage: only in the graph under `--cfg noxu_shuttle`.  Lets the
# cursor's `db_impl` RwLock be scheduled by shuttle via the
# noxu_util::dst_sync_pl seam (matching the already-seamed tree node latch), so
# the reposition-vs-BIN-split race is deterministically explorable.  Default
# builds never pull shuttle in.
[target.'cfg(noxu_shuttle)'.dependencies]
shuttle = { workspace = true }

[dev-dependencies]
hegeltest = { workspace = true }
tempfile = "3"

# DST cursor coverage: shuttle tests in tests/shuttle_*.rs are gated behind
# `#![cfg(noxu_shuttle)]`, so these dev-deps only matter under that cfg.
[target.'cfg(noxu_shuttle)'.dev-dependencies]
shuttle = { workspace = true }

[lints]
workspace = true
